token changes